--- a/src/App.css
+++ b/src/App.css
@@ -52,12 +52,15 @@ body {
 }
 
 @media (max-width: 768px) {
-  
+    
   .list{
      display: grid;
      grid-template-columns: 1fr;
      gap: 0;
      
+  }
+  body{
+    display: block;
   }
 }
 
